finally fixed the weird spacing issue in main.css

--- a/main.css
+++ b/main.css
@@ -10,20 +10,19 @@
 	background: var(--bggreen);
 }
 .header {
-	background: var(--border_color);
-	width: 99%;
+	background: var(--white);
+	width: max-width;
 	text-align: center;
 	color: var(--black);
-	display: inline-block;
+	display: block;
 	height: 157px;
 	padding: 5px;
-	white-space: nowrap;
 }
 .left_logo {
 	background: var(--white);
 	display: inline-block;
 	float: left;
-	padding: 8px 0px;
+	padding: 7px 0px;
 	width: 229px;
 }
 .header h1 {
@@ -41,7 +40,7 @@
 .navbar {
 	overflow: hidden;
 	background-color: var(--black);	
-	width: 100%;
+	width: max-width;
 }
 .navbar a {
   	float: left; 
@@ -57,7 +56,7 @@
 }
 .main {
 	background: var(--white);
-	width: 99%;
+	width: max-width;
 }
 .hours {
 	text-align: center;
@@ -68,7 +67,7 @@
 }
 .about_us {
 	text-align: center;
-	padding: 20px;
+	padding: 10px;
 }
 .about_us h {
 	font-size: 20px;
@@ -91,8 +90,9 @@
 	overflow: hidden;
 	padding: 5px;
 	text-align: center;
+	display: block;
 	background: var(--white);
-	width: 99%;
+	width: max-width;
 }
 .footer h2 {
 	font-size: 10px;
